# nexus-graph-ai

./: .gitignore  AUDIT_REPORT.md  CURRENT_STATE.md  Dockerfile  Makefile  PROPOSAL.md  README.md  TECH_DUE_DILIGENCE_REPORT.md  TIER1_AUDIT_REPORT.md  app.py  chat.py  database.py  debug_identity.py  empleados.txt  main.py  pyproject.toml  requirements.txt  retriever.py  schemas.py
.clients/: .clinerules  00_REQUERIMENTS.md
.github/workflows/: security.yml
.roo/: instructions.md
.roo copy/: custom_modes.json
api/: main.py  mcp.py
cli/: ask.py  ingest.py
core/: auth.py  concurrency.py  config.py  cypher_templates.py  database.py  engine.py  exceptions.py  multi_agent.py  observability.py  ontology.py  pii_sanitizer.py  router.py  schema_map.py  schemas.py  security_guardrails.py  worker.py
data/: negocio.txt
k8s/: deployment.yaml  hpa.yaml
plans/: IMPLEMENTATION_REPORT.md  PLAN.md  VULNERABILITIES_1_2_PLAN.md  VULNERABILITY_3_IMPLEMENTATION_PLAN.md  VULNERABILITY_3_IMPLEMENTATION_SUMMARY.md  VULNERABILITY_3_TEST_SPECIFICATION.md
scripts/: debug_identity.py  security_audit.py
tests/: conftest.py  test_api.py  test_basico.py  test_circuit_breaker.py  test_concurrency.py  test_conn.py  test_database.py  test_idempotency.py  test_ingest.py  test_mcp_tools.py  test_observability.py  test_ontology.py  test_router.py  test_stress.py  test_strict_validation.py  test_worker.py
