[project]
name = "nexus-graph-ai"
version = "0.1.0"
description = "Nexus Graph AI - Enterprise Knowledge Graph with GraphRAG"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.13.0,<3.0.0",
    "pydantic-ai>=1.74.0,<2.0.0",
    "pydantic-core>=2.41.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "C90", "N", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
strict = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
